--- a/documentatie/Scholarly HTML.html
+++ b/documentatie/Scholarly HTML.html
@@ -23,5 +23,31 @@
       notch down, getting rid of most of the features and keeping only essentials that could be of help to users, we still have the simple floating buttons and colorful backgrounds, and we have 
       only a handful of features, we have a alarm for stress, reminders for various tasks and a easy menu for assistance during quick excersises such as walking and stretching.
     </p>
+    <h2>Transfering from Stage D to Stage F</h2>
+    <p>
+      Transfering from one component to the other was a big step for our team, besides coming up with a better design that we hoped you liked, we decided to add a few more features
+      on the mobile side of the app so that we could make our app more useful.
+      On the smartwatch side of things, we kept a more rudimentary style. The app matches the previously done sketches, we wanted to have more of a simple style because there
+      seemed to be no reason why a watch app should be "complex", besides, the watch is more for monitoring different levels like anxiety, stress and heartbeat than to help you 
+      become a calmer person in general. On that note, the watch is best suited for quick tasks like keeping up with your exercises and monitoring your emotional state, the more
+      important tasks are for the phone app.
+      The phone app, on the other hand, is a step up from last component's sketches, besides implementing things like activities and goal trackers, we added a few more things 
+      such as: a music tab, a sleep calendar, a "today" page that recommends different activities daily. The phone app, similar to what could've been a web app, is meant to 
+      cater to more needs, it provides meditation guides curated by different "meditation masters", exercise guides also and besides all of those, we have extended dashboards
+      that represent different emotional status for the costumer which he may later present to a psychiatrist.
+    </p>
+    <h2>Design Choices and accesability features</h2>
+      <p>
+      The design of our apps is meant to be a friendly and comforting one. We picked a cute, peaceful mauve color on a mostly white background. We feel like this choice should
+      make the users feel safer and more welcome while using the app. Aside from that we mostly use other warm, calming colors and even a few cute illustrations of a sun.
+      </p>
+      <p>
+      On the accesability side of things, we tried to keep things as simple as possible making use of large buttons and thumbnails for our videos.
+      </p>
+    <h2>Interaction design patters</h2>
+    <p>
+      Among the interaction designs we used in our apps, we have tons of taps, for interacting with a lot of things like: playing videos, opening menus etc., we have tap, hold
+      and drags for sliders on smartwatches and controlling videos on mobiles, swipes on watches for going back to a previous menu and long presses on phones for previewing videos.
+    </p>
   </body>
 </html>
